--- a/drproject/restapp/templates/home1.html
+++ b/drproject/restapp/templates/home1.html
@@ -121,8 +121,8 @@
         <p>Find your dream job today!</p>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Jobs</a>
+        <a href="{% url 'home' %}">Home</a>
+        <a href="{% url 'upload_CV' %}">Jobs</a>
         <a href="{% url 'upload_job' %}">Post a Job</a>
         <a href="#">Contact</a>
     </nav>
